cmake_minimum_required(VERSION 3.12)
project(algorithms_and_data_structures)

set(CMAKE_CXX_STANDARD 14)

add_executable(algorithms_and_data_structures main.cpp heap/heap.h heap/heapSort.h heap/indexHeap.h unionFind/unionFind1.h unionFind/unionFindTestHelper.h unionFind/unionFind2.h unionFind/unionFind3.h unionFind/unionFind4.h)